<resources>
    <string name="app_name">Movie World</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="trending_now">Trending Now</string>
    <string name="trending">Trending</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="detail">Detail</string>
    <string name="cannot_load_trending_movies_check_network_connection">Cannot load trending movies: check network
        connection
    </string>
    <string name="cannot_load_trending_movies">Cannot load trending movies</string>
    <string name="summary">Summary</string>
    <string name="reviews">Reviews</string>
    <string name="overview">Overview</string>
    <string name="featured_crews">Featured Crews</string>
    <string name="very_long_text">Very Long Text Very Long Text Very Long Text Very Long Text Very Long Text Very Long
        Text Very Long Text Very Long Text Very Long Text Very Long Text Very Long Text Very Long Text Very Long Text
        Very Long Text Very Long Text
    </string>
    <string name="watch_trailer">Watch Trailer on Youtube</string>
    <string name="get_tickets">Get Tickets</string>
    <string name="share">Share</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="watch_trailers_on_youtube">Watch Trailers on YouTube</string>
    <string name="trailer">Trailer</string>
    <string name="casts">Casts</string>
    <string name="loading_trending_movies">Loading Trending Movies...</string>
    <string name="loading_movie_details">Loading Movie Details</string>
</resources>
