<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/fragment_details">

    <LinearLayout
        android:id="@+id/container_movie_details_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tv_movie_details_overview_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/overview"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/tv_movie_details_overview_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="14sp"
            tools:text="@string/very_long_text" />

        <View
            style="@style/Divider"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_movie_details_casts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tv_movie_details_casts_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/casts"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/tv_movie_details_casts_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="14sp"
            tools:text="@string/very_long_text"/>

        <View
            style="@style/Divider"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_movie_details_crews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_movie_details_featured_crews_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/featured_crews"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_movie_details_featured_crews_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="14sp"
            tools:text="@string/very_long_text"/>

        <View
            android:id="@+id/divider3"
            style="@style/Divider"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_movie_details_reviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_movie_details_featured_reviews_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/reviews"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_movie_details_featured_reviews_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textSize="14sp"
            tools:text="@string/very_long_text" />

    </LinearLayout>

</LinearLayout>